crates/java-syntax/tests/snapshots/lexer_snapshots__lex_integer_literals_hex.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
0x0 0x1A2B 0XCAFE_BABE 0xFFl
TOKENS:
INTEGER_LITERAL "0x0"
WHITESPACE " "
INTEGER_LITERAL "0x1A2B"
WHITESPACE " "
INTEGER_LITERAL "0XCAFE_BABE"
WHITESPACE " "
INTEGER_LITERAL "0xFFl"
EOF ""

LEX_ERRORS:
<none>
