crates/java-syntax/tests/snapshots/lexer_snapshots__lex_keywords_and_identifiers_1.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
public static void main
TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
STATIC_KW "static"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "main"

LEX_ERRORS:
<none>
