crates/java-syntax/tests/snapshots/lexer_snapshots__lex_keywords_and_identifiers_2.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
class interface enum record
TOKENS:
CLASS_KW "class"
WHITESPACE " "
INTERFACE_KW "interface"
WHITESPACE " "
ENUM_KW "enum"
WHITESPACE " "
IDENTIFIER "record"

LEX_ERRORS:
<none>
