crates/java-syntax/tests/snapshots/lexer_snapshots__lex_keywords_and_identifiers_3.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
$myVar _underscore value123
TOKENS:
IDENTIFIER "$myVar"
WHITESPACE " "
IDENTIFIER "_underscore"
WHITESPACE " "
IDENTIFIER "value123"

LEX_ERRORS:
<none>
