crates/java-syntax/tests/snapshots/lexer_snapshots__lex_line_comment_only.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
// this is a line comment

TOKENS:
LINE_COMMENT "// this is a line comment"
WHITESPACE "\n"

LEX_ERRORS:
<none>
