crates/java-syntax/tests/snapshots/lexer_snapshots__lex_operators.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
+ += ++ - -= -- ->
* *= / /= % %= == = != !
< <= << <<= > >= >> >>= >>> >>>=
& &= | |= ^ ^= && ||

TOKENS:
PLUS "+"
WHITESPACE " "
PLUS_EQUAL "+="
WHITESPACE " "
PLUS_PLUS "++"
WHITESPACE " "
MINUS "-"
WHITESPACE " "
MINUS_EQUAL "-="
WHITESPACE " "
MINUS_MINUS "--"
WHITESPACE " "
ARROW "->"
WHITESPACE "\n"
STAR "*"
WHITESPACE " "
MULTIPLE_EQUAL "*="
WHITESPACE " "
SLASH "/"
WHITESPACE " "
DIVIDE_EQUAL "/="
WHITESPACE " "
MODULO "%"
WHITESPACE " "
MODULO_EQUAL "%="
WHITESPACE " "
EQUAL_EQUAL "=="
WHITESPACE " "
EQUAL "="
WHITESPACE " "
NOT_EQUAL "!="
WHITESPACE " "
NOT "!"
WHITESPACE "\n"
LESS "<"
WHITESPACE " "
LESS_EQUAL "<="
WHITESPACE " "
LEFT_SHIFT "<<"
WHITESPACE " "
LEFT_SHIFT_EQUAL "<<="
WHITESPACE " "
GREATER ">"
WHITESPACE " "
GREATER_EQUAL ">="
WHITESPACE " "
RIGHT_SHIFT ">>"
WHITESPACE " "
RIGHT_SHIFT_EQUAL ">>="
WHITESPACE " "
UNSIGNED_RIGHT_SHIFT ">>>"
WHITESPACE " "
UNSIGNED_RIGHT_SHIFT_EQUAL ">>>="
WHITESPACE "\n"
BIT_AND "&"
WHITESPACE " "
AND_EQUAL "&="
WHITESPACE " "
BIT_OR "|"
WHITESPACE " "
OR_EQUAL "|="
WHITESPACE " "
CARET "^"
WHITESPACE " "
XOR_EQUAL "^="
WHITESPACE " "
AND "&&"
WHITESPACE " "
OR "||"
WHITESPACE "\n"

LEX_ERRORS:
<none>
