crates/java-syntax/tests/snapshots/lexer_snapshots__lex_string_template_multiple_holes.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
"a \{b} c \{d} e"
TOKENS:
STRING_TEMPLATE_BEGIN "\"a \\{"
IDENTIFIER "b"
STRING_TEMPLATE_MID "} c \\{"
IDENTIFIER "d"
STRING_TEMPLATE_END "} e\""
EOF ""

LEX_ERRORS:
<none>
